# minesweeper

./: .clang-format  .gitignore  CMakeLists.txt  CMakelists.txt  README.md
assets/: advanced  button  classic  em_happy  expert  flag  humburger
include/: board.h  colors.h  game.h  game_properties.h  panel.h  properties.h  util.h  window.h
lib/: CMakelists.txt  tigr.c
lib/board/: CMakeLists.txt  board.c  board.h
lib/graphics/: CMakeLists.txt  README.md
lib/graphics/include/: alignment.h  assets.h  component.h  mouse_event.h  panel.h  window.h
lib/graphics/src/: assets.c  component.c  mouse_event.c  panel.c  window.c
lib/tigr/: CMakeLists.txt  tigr.c  tigr.h
resources/assets/: cell  em_chad  em_sad  em_shock  mine  question
src/: board.c  game.c  main.c  panel.c  util.c  window.c
